--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "author": "evad1n <willdickinson98@gmail.com>",
   "description": "An electron-vue project",
-  "license": null,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/evad1n/flashcards.git"
+  },
+  "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
@@ -15,7 +19,7 @@
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "postinstall": "install-app-deps",
-    "rebuild": "electron-rebuild -f -w sqlite3"
+    "rebuild": "./node_modules/.bin/electron-rebuild"
   },
   "build": {
     "productName": "vue-flashcards",
@@ -52,11 +56,11 @@
     }
   },
   "dependencies": {
+    "better-sqlite3": "^7.1.0",
     "bulma": "^0.9.0",
     "jquery": "^3.5.1",
     "node-gyp": "^7.0.0",
     "node-pre-gyp": "^0.15.0",
-    "sqlite3": "^5.0.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
